--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - run:
          command: |
             echo technotrainer tests to be executed.
-            mvn clean install
+            mvn clean test
 
 workflows:
   first-workflow-maven:
