--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ jobs:
             mvn clean test
       - store_test_results:
           path: /home/circleci/project/target/
+      - store_artifacts:
+          path: /home/circleci/project/target/site/jacoco
+          destination: testcaseDetails
 
 workflows:
   first-workflow-maven:
