--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,18 @@ jobs:
       - store_artifacts:
           path: /home/circleci/project/target/circleci-0.0.1-SNAPSHOT-jar-with-dependencies.jar
           destination: circleci-0.0.1.jar
+  deploy-stage:
+    docker:
+      - image: circleci/openjdk:8u171-jdk
+    working_directory: /tmp/my-project
+    steps:
+      - run:
+          name: Deploy
+          command: |
+            curl -H "Circle-Token: $CIRCLE_CI_TOKEN" https://circleci.com/api/v1.1/project/github/rishikhuranasufi/$CIRCLE_PROJECT_REPONAME/latest/artifacts \
+               | grep -o 'https://[^"]*' \
+               | wget --verbose --header "Circle-Token: $CIRCLE_CI_TOKEN" --input-file -
+            java -jar circleci-0.0.1.jar 11 11
 
 workflows:
   first-workflow-maven:
@@ -35,5 +47,6 @@ workflows:
       - first-mvn-job-to-execute-tests  
       - first-mvn-job-to-create-package:
           requires:
-            - first-mvn-job-to-execute-tests      
+            - first-mvn-job-to-execute-tests
+      - deploy-stage            
   
