--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,5 +48,7 @@ workflows:
       - first-mvn-job-to-create-package:
           requires:
             - first-mvn-job-to-execute-tests
-      - deploy-stage            
+      - deploy-stage
+          requires:
+            - first-mvn-job-to-create-package
   
